--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h2>Welcome, {{ username }}!</h2>
+    <a href="/add_note">Add New Note</a>
     <h3>Your Notes:</h3>
     {% for note in notes %}
         <div class="note">
