--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,11 @@ textarea {
     resize: vertical;
 }
 
+textarea {
+    height: 150px;
+    resize: vertical;
+}
+
 .note {
     background: #ffebcd;
     padding: 10px;
